--- a/ionic-birthday-list/scss/modals/newDate.scss
+++ b/ionic-birthday-list/scss/modals/newDate.scss
@@ -12,15 +12,15 @@
 
     ion-content>.scroll {
         height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: center;
     }
 
     .additional-data {
       .thumbnail-container {
         padding: 0.5rem 1rem;
-        
+
         .col.col-80 {
           padding: 0;
           display: flex;
@@ -34,7 +34,10 @@
           .image-container {
             width: 30px;
             height: 30px;
-            border: solid 1px red;
+            img {
+              width: 100%;
+              height: 100%;
+            }
           }
         }
       }
